--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [3.9, '3.10']
 
     steps:
     - uses: actions/checkout@v2
@@ -53,7 +53,3 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pycodestyle        
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with pycodestyle
-      run: |
-        pycodestyle tableaudocumentapi test samples
-  
